@@ -1,4 +1,9 @@
 2011-10-29  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/error.c, ext/oci8/oci8.c, lib/oci8/object.rb, lib/oci8/oci8.rb:
+	    reset OCI8#last_error when OCI8#parse or OCI8#exec is called.
+	    fix bugs added by the last commit but one.
+
+2011-10-29  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: use RbConfig::CONFIG instead of obsolete
 	    Config::CONFIG.
 
